added CentOS 7.4 (bios-version only)

--- a/tasks/centos7.yml
+++ b/tasks/centos7.yml
@@ -1,7 +1,7 @@
 ---
 ### CentOS 7.0
 - name: CentOS 7.0 BIOS
-  shell: "fast-vm import_image centos-7.0 {{ public_image_url_base }}/generated/6g__centos-7.0.img.xz {{ xml_url_base }}/centos/xml/centos-6.3-7.3.xml {{ hacks_url_base }}/centos/hacks/6g_centos-7-hacks.sh"
+  shell: "fast-vm import_image centos-7.0 {{ public_image_url_base }}/generated/6g__centos-7.0.img.xz {{ xml_url_base }}/centos/xml/centos-6.3-7.4.xml {{ hacks_url_base }}/centos/hacks/6g_centos-7-hacks.sh"
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}centos-7.0"
   tags:
@@ -18,7 +18,7 @@
 
 ### CentOS 7.1
 - name: CentOS 7.1 BIOS
-  shell: "fast-vm import_image centos-7.1 {{ public_image_url_base }}/generated/6g__centos-7.1.img.xz {{ xml_url_base }}/centos/xml/centos-6.3-7.3.xml {{ hacks_url_base }}/centos/hacks/6g_centos-7-hacks.sh"
+  shell: "fast-vm import_image centos-7.1 {{ public_image_url_base }}/generated/6g__centos-7.1.img.xz {{ xml_url_base }}/centos/xml/centos-6.3-7.4.xml {{ hacks_url_base }}/centos/hacks/6g_centos-7-hacks.sh"
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}centos-7.1"
   tags:
@@ -35,7 +35,7 @@
 
 ### CentOS 7.2
 - name: CentOS 7.2 BIOS
-  shell: "fast-vm import_image centos-7.2 {{ public_image_url_base }}/generated/6g__centos-7.2.img.xz {{ xml_url_base }}/centos/xml/centos-6.3-7.3.xml {{ hacks_url_base }}/centos/hacks/6g_centos-7-hacks.sh"
+  shell: "fast-vm import_image centos-7.2 {{ public_image_url_base }}/generated/6g__centos-7.2.img.xz {{ xml_url_base }}/centos/xml/centos-6.3-7.4.xml {{ hacks_url_base }}/centos/hacks/6g_centos-7-hacks.sh"
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}centos-7.2"
   tags:
@@ -52,7 +52,7 @@
 
 ### CentOS 7.3
 - name: CentOS 7.3 BIOS
-  shell: "fast-vm import_image centos-7.3 {{ public_image_url_base }}/generated/6g__centos-7.3.img.xz {{ xml_url_base }}/centos/xml/centos-6.3-7.3.xml {{ hacks_url_base }}/centos/hacks/6g_centos-7-hacks.sh"
+  shell: "fast-vm import_image centos-7.3 {{ public_image_url_base }}/generated/6g__centos-7.3.img.xz {{ xml_url_base }}/centos/xml/centos-6.3-7.4.xml {{ hacks_url_base }}/centos/hacks/6g_centos-7-hacks.sh"
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}centos-7.3"
   tags:
@@ -66,3 +66,13 @@
   tags:
     - centos7_uefi
     - centos7_3_uefi
+
+### CentOS 7.4
+- name: CentOS 7.4 BIOS
+  shell: "fast-vm import_image centos-7.4 {{ public_image_url_base }}/generated/6g__centos-7.4.img.xz {{ xml_url_base }}/centos/xml/centos-6.3-7.4.xml {{ hacks_url_base }}/centos/hacks/6g_centos-7-hacks.sh"
+  args:
+    creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}centos-7.4"
+  tags:
+    - centos7
+    - centos7_4
+
