--- a/tasks/fedora.yml
+++ b/tasks/fedora.yml
@@ -10,7 +10,7 @@
 
 ### Fedora 23
 - name: Fedora 23 BIOS
-  shell: "fast-vm import_image f23 {{ public_image_url_base }}/fedora-23-server.img.xz {{ xml_url_base }}/archived/fedora/xml/fedora-23.xml {{ hacks_url_base }}/archived/fedora/hacks/fedora-23-hacks.sh"
+  shell: "fast-vm import_image f23 {{ public_image_url_base }}/fedora-23-server.img.xz {{ xml_url_base }}/archived/fedora/xml/fedora-23-27.xml {{ hacks_url_base }}/archived/fedora/hacks/fedora-23-hacks.sh"
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}f23"
   tags:
@@ -19,7 +19,7 @@
 
 ### Fedora 24
 - name: Fedora 24 BIOS
-  shell: "fast-vm import_image f24 {{ public_image_url_base }}/fedora-24-server.img.xz {{ xml_url_base }}/fedora/xml/fedora-23-26.xml {{ hacks_url_base }}/fedora/hacks/fedora-24-hacks.sh"
+  shell: "fast-vm import_image f24 {{ public_image_url_base }}/fedora-24-server.img.xz {{ xml_url_base }}/fedora/xml/fedora-23-27.xml {{ hacks_url_base }}/fedora/hacks/fedora-24-hacks.sh"
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}f24"
   tags:
@@ -28,7 +28,7 @@
 
 ### Fedora 25
 - name: Fedora 25 BIOS
-  shell: "fast-vm import_image fedora25 {{ public_image_url_base }}/6g__fedora-25.img.xz {{ xml_url_base }}/fedora/xml/fedora-23-26.xml {{ hacks_url_base }}/fedora/hacks/6g_fedora-25-hacks.sh"
+  shell: "fast-vm import_image fedora25 {{ public_image_url_base }}/6g__fedora-25.img.xz {{ xml_url_base }}/fedora/xml/fedora-23-27.xml {{ hacks_url_base }}/fedora/hacks/6g_fedora-25-hacks.sh"
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}fedora25"
   tags:
@@ -37,9 +37,18 @@
 
 ### Fedora 26
 - name: Fedora 26 BIOS
-  shell: "fast-vm import_image fedora26 {{ public_image_url_base }}/6g__fedora-26.img.xz {{ xml_url_base }}/fedora/xml/fedora-23-26.xml {{ hacks_url_base }}/fedora/hacks/6g_fedora-26-hacks.sh"
+  shell: "fast-vm import_image fedora26 {{ public_image_url_base }}/6g__fedora-26.img.xz {{ xml_url_base }}/fedora/xml/fedora-23-27.xml {{ hacks_url_base }}/fedora/hacks/6g_fedora-26-hacks.sh"
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}fedora26"
   tags:
     - fedora
-    - fedora_25
+    - fedora_26
+
+### Fedora 27
+- name: Fedora 27 BIOS
+  shell: "fast-vm import_image fedora27 {{ public_image_url_base }}/6g__fedora-27.img.xz {{ xml_url_base }}/fedora/xml/fedora-23-27.xml {{ hacks_url_base }}/fedora/hacks/6g_fedora-27-hacks.sh"
+  args:
+    creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}fedora26"
+  tags:
+    - fedora
+    - fedora_27
