--- a/tasks/centos7.yml
+++ b/tasks/centos7.yml
@@ -1,7 +1,7 @@
 ---
 ### CentOS 7.0
 - name: CentOS 7.0 BIOS
-  shell: "fast-vm import_image centos-7.0 {{ public_image_url_base }}/generated/6g__centos-7.0.img.xz {{ xml_url_base }}/centos/xml/centos-6.3-7.4.xml {{ hacks_url_base }}/centos/hacks/6g_centos-7-hacks.sh"
+  shell: "fast-vm import_image centos-7.0 {{ public_image_url_base }}/generated/6g__centos-7.0.img.xz {{ xml_url_base }}/centos/xml/centos-6.3-current.xml {{ hacks_url_base }}/centos/hacks/6g_centos-7-hacks.sh"
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}centos-7.0"
   tags:
@@ -9,7 +9,7 @@
     - centos7_0
 
 - name: CentOS 7.0 UEFI
-  shell: "fast-vm import_image centos-7.0-uefi {{ public_image_url_base }}/generated/6g__centos-7.0-uefi.img.xz {{ xml_url_base }}/centos/xml/centos-7.0-7.3-uefi.xml {{ hacks_url_base }}/centos/hacks/6g_centos-7-hacks-uefi.sh"
+  shell: "fast-vm import_image centos-7.0-uefi {{ public_image_url_base }}/generated/6g__centos-7.0-uefi.img.xz {{ xml_url_base }}/centos/xml/centos-7.0-current-uefi.xml {{ hacks_url_base }}/centos/hacks/6g_centos-7-hacks-uefi.sh"
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}centos-7.0-uefi"
   tags:
@@ -18,7 +18,7 @@
 
 ### CentOS 7.1
 - name: CentOS 7.1 BIOS
-  shell: "fast-vm import_image centos-7.1 {{ public_image_url_base }}/generated/6g__centos-7.1.img.xz {{ xml_url_base }}/centos/xml/centos-6.3-7.4.xml {{ hacks_url_base }}/centos/hacks/6g_centos-7-hacks.sh"
+  shell: "fast-vm import_image centos-7.1 {{ public_image_url_base }}/generated/6g__centos-7.1.img.xz {{ xml_url_base }}/centos/xml/centos-6.3-current.xml {{ hacks_url_base }}/centos/hacks/6g_centos-7-hacks.sh"
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}centos-7.1"
   tags:
@@ -26,7 +26,7 @@
     - centos7_1
 
 - name: CentOS 7.1 UEFI
-  shell: "fast-vm import_image centos-7.1-uefi {{ public_image_url_base }}/generated/6g__centos-7.1-uefi.img.xz {{ xml_url_base }}/centos/xml/centos-7.0-7.3-uefi.xml {{ hacks_url_base }}/centos/hacks/6g_centos-7-hacks-uefi.sh"
+  shell: "fast-vm import_image centos-7.1-uefi {{ public_image_url_base }}/generated/6g__centos-7.1-uefi.img.xz {{ xml_url_base }}/centos/xml/centos-7.0-current-uefi.xml {{ hacks_url_base }}/centos/hacks/6g_centos-7-hacks-uefi.sh"
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}centos-7.1-uefi"
   tags:
@@ -35,7 +35,7 @@
 
 ### CentOS 7.2
 - name: CentOS 7.2 BIOS
-  shell: "fast-vm import_image centos-7.2 {{ public_image_url_base }}/generated/6g__centos-7.2.img.xz {{ xml_url_base }}/centos/xml/centos-6.3-7.4.xml {{ hacks_url_base }}/centos/hacks/6g_centos-7-hacks.sh"
+  shell: "fast-vm import_image centos-7.2 {{ public_image_url_base }}/generated/6g__centos-7.2.img.xz {{ xml_url_base }}/centos/xml/centos-6.3-current.xml {{ hacks_url_base }}/centos/hacks/6g_centos-7-hacks.sh"
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}centos-7.2"
   tags:
@@ -43,7 +43,7 @@
     - centos7_2
 
 - name: CentOS 7.2 UEFI
-  shell: "fast-vm import_image centos-7.2-uefi {{ public_image_url_base }}/generated/6g__centos-7.2-uefi.img.xz {{ xml_url_base }}/centos/xml/centos-7.0-7.3-uefi.xml {{ hacks_url_base }}/centos/hacks/6g_centos-7-hacks-uefi.sh"
+  shell: "fast-vm import_image centos-7.2-uefi {{ public_image_url_base }}/generated/6g__centos-7.2-uefi.img.xz {{ xml_url_base }}/centos/xml/centos-7.0-current-uefi.xml {{ hacks_url_base }}/centos/hacks/6g_centos-7-hacks-uefi.sh"
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}centos-7.2-uefi"
   tags:
@@ -52,7 +52,7 @@
 
 ### CentOS 7.3
 - name: CentOS 7.3 BIOS
-  shell: "fast-vm import_image centos-7.3 {{ public_image_url_base }}/generated/6g__centos-7.3.img.xz {{ xml_url_base }}/centos/xml/centos-6.3-7.4.xml {{ hacks_url_base }}/centos/hacks/6g_centos-7-hacks.sh"
+  shell: "fast-vm import_image centos-7.3 {{ public_image_url_base }}/generated/6g__centos-7.3.img.xz {{ xml_url_base }}/centos/xml/centos-6.3-current.xml {{ hacks_url_base }}/centos/hacks/6g_centos-7-hacks.sh"
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}centos-7.3"
   tags:
@@ -60,7 +60,7 @@
     - centos7_3
 
 - name: CentOS 7.3 UEFI
-  shell: "fast-vm import_image centos-7.3-uefi {{ public_image_url_base }}/generated/6g__centos-7.3-uefi.img.xz {{ xml_url_base }}/centos/xml/centos-7.0-7.3-uefi.xml {{ hacks_url_base }}/centos/hacks/6g_centos-7-hacks-uefi.sh"
+  shell: "fast-vm import_image centos-7.3-uefi {{ public_image_url_base }}/generated/6g__centos-7.3-uefi.img.xz {{ xml_url_base }}/centos/xml/centos-7.0-current-uefi.xml {{ hacks_url_base }}/centos/hacks/6g_centos-7-hacks-uefi.sh"
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}centos-7.3-uefi"
   tags:
@@ -69,7 +69,7 @@
 
 ### CentOS 7.4
 - name: CentOS 7.4 BIOS
-  shell: "fast-vm import_image centos-7.4 {{ public_image_url_base }}/generated/6g__centos-7.4.img.xz {{ xml_url_base }}/centos/xml/centos-6.3-7.4.xml {{ hacks_url_base }}/centos/hacks/6g_centos-7-hacks.sh"
+  shell: "fast-vm import_image centos-7.4 {{ public_image_url_base }}/generated/6g__centos-7.4.img.xz {{ xml_url_base }}/centos/xml/centos-6.3-current.xml {{ hacks_url_base }}/centos/hacks/6g_centos-7-hacks.sh"
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}centos-7.4"
   tags:
