--- a/tasks/rhel7.yml
+++ b/tasks/rhel7.yml
@@ -1,7 +1,7 @@
 ---
 ### RHEL 7.0
 - name: RHEL 7.0 BIOS
-  shell: "fast-vm import_image rhel-7.0 {{ rhel_image_url_base }}/generated/6g__rhel-7.0.img.xz {{ xml_url_base }}/rhel/xml/rhel-6.3-7.4.xml {{ hacks_url_base }}/rhel/hacks/6g_rhel-7-hacks.sh"
+  shell: "fast-vm import_image rhel-7.0 {{ rhel_image_url_base }}/generated/6g__rhel-7.0.img.xz {{ xml_url_base }}/rhel/xml/rhel-6.3-current.xml {{ hacks_url_base }}/rhel/hacks/6g_rhel-7-hacks.sh"
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}rhel-7.0"
   tags:
@@ -9,7 +9,7 @@
     - rhel7_0
 
 - name: RHEL 7.0 UEFI
-  shell: "fast-vm import_image rhel-7.0-uefi {{ rhel_image_url_base }}/generated/6g__rhel-6.3-uefi.img.xz {{ xml_url_base }}/rhel/xml/rhel-7.0-7.4-uefi.xml {{ hacks_url_base }}/rhel/hacks/6g_rhel-7-hacks-uefi.sh"
+  shell: "fast-vm import_image rhel-7.0-uefi {{ rhel_image_url_base }}/generated/6g__rhel-6.3-uefi.img.xz {{ xml_url_base }}/rhel/xml/rhel-7.0-current-uefi.xml {{ hacks_url_base }}/rhel/hacks/6g_rhel-7-hacks-uefi.sh"
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}rhel-7.0-uefi"
   tags:
@@ -18,7 +18,7 @@
 
 ### RHEL 7.1
 - name: RHEL 7.1 BIOS
-  shell: "fast-vm import_image rhel-7.1 {{ rhel_image_url_base }}/generated/6g__rhel-7.1.img.xz {{ xml_url_base }}/rhel/xml/rhel-6.3-7.4.xml {{ hacks_url_base }}/rhel/hacks/6g_rhel-7-hacks.sh"
+  shell: "fast-vm import_image rhel-7.1 {{ rhel_image_url_base }}/generated/6g__rhel-7.1.img.xz {{ xml_url_base }}/rhel/xml/rhel-6.3-current.xml {{ hacks_url_base }}/rhel/hacks/6g_rhel-7-hacks.sh"
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}rhel-7.1"
   tags:
@@ -26,7 +26,7 @@
     - rhel7_1
 
 - name: RHEL 7.1 UEFI
-  shell: "fast-vm import_image rhel-7.1-uefi {{ rhel_image_url_base }}/generated/6g__rhel-6.3-uefi.img.xz {{ xml_url_base }}/rhel/xml/rhel-7.0-7.4-uefi.xml {{ hacks_url_base }}/rhel/hacks/6g_rhel-7-hacks-uefi.sh"
+  shell: "fast-vm import_image rhel-7.1-uefi {{ rhel_image_url_base }}/generated/6g__rhel-6.3-uefi.img.xz {{ xml_url_base }}/rhel/xml/rhel-7.0-current-uefi.xml {{ hacks_url_base }}/rhel/hacks/6g_rhel-7-hacks-uefi.sh"
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}rhel-7.1-uefi"
   tags:
@@ -35,7 +35,7 @@
 
 ### RHEL 7.2
 - name: RHEL 7.2 BIOS
-  shell: "fast-vm import_image rhel-7.2 {{ rhel_image_url_base }}/generated/6g__rhel-7.2.img.xz {{ xml_url_base }}/rhel/xml/rhel-6.3-7.4.xml {{ hacks_url_base }}/rhel/hacks/6g_rhel-7-hacks.sh"
+  shell: "fast-vm import_image rhel-7.2 {{ rhel_image_url_base }}/generated/6g__rhel-7.2.img.xz {{ xml_url_base }}/rhel/xml/rhel-6.3-current.xml {{ hacks_url_base }}/rhel/hacks/6g_rhel-7-hacks.sh"
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}rhel-7.2"
   tags:
@@ -43,7 +43,7 @@
     - rhel7_2
 
 - name: RHEL 7.2 UEFI
-  shell: "fast-vm import_image rhel-7.2-uefi {{ rhel_image_url_base }}/generated/6g__rhel-6.3-uefi.img.xz {{ xml_url_base }}/rhel/xml/rhel-7.0-7.4-uefi.xml {{ hacks_url_base }}/rhel/hacks/6g_rhel-7-hacks-uefi.sh"
+  shell: "fast-vm import_image rhel-7.2-uefi {{ rhel_image_url_base }}/generated/6g__rhel-6.3-uefi.img.xz {{ xml_url_base }}/rhel/xml/rhel-7.0-current-uefi.xml {{ hacks_url_base }}/rhel/hacks/6g_rhel-7-hacks-uefi.sh"
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}rhel-7.2-uefi"
   tags:
@@ -52,7 +52,7 @@
 
 ### RHEL 7.3
 - name: RHEL 7.3 BIOS
-  shell: "fast-vm import_image rhel-7.3 {{ rhel_image_url_base }}/generated/6g__rhel-7.3.img.xz {{ xml_url_base }}/rhel/xml/rhel-6.3-7.4.xml {{ hacks_url_base }}/rhel/hacks/6g_rhel-7-hacks.sh"
+  shell: "fast-vm import_image rhel-7.3 {{ rhel_image_url_base }}/generated/6g__rhel-7.3.img.xz {{ xml_url_base }}/rhel/xml/rhel-6.3-current.xml {{ hacks_url_base }}/rhel/hacks/6g_rhel-7-hacks.sh"
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}rhel-7.3"
   tags:
@@ -60,7 +60,7 @@
     - rhel7_3
 
 - name: RHEL 7.3 UEFI
-  shell: "fast-vm import_image rhel-7.3-uefi {{ rhel_image_url_base }}/generated/6g__rhel-6.3-uefi.img.xz {{ xml_url_base }}/rhel/xml/rhel-7.0-7.4-uefi.xml {{ hacks_url_base }}/rhel/hacks/6g_rhel-7-hacks-uefi.sh"
+  shell: "fast-vm import_image rhel-7.3-uefi {{ rhel_image_url_base }}/generated/6g__rhel-6.3-uefi.img.xz {{ xml_url_base }}/rhel/xml/rhel-7.0-current-uefi.xml {{ hacks_url_base }}/rhel/hacks/6g_rhel-7-hacks-uefi.sh"
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}rhel-7.3-uefi"
   tags:
@@ -69,7 +69,7 @@
 
 ### RHEL 7.4
 - name: RHEL 7.4 BIOS
-  shell: "fast-vm import_image rhel-7.4 {{ rhel_image_url_base }}/generated/6g__rhel-7.4.img.xz {{ xml_url_base }}/rhel/xml/rhel-6.3-7.4.xml {{ hacks_url_base }}/rhel/hacks/6g_rhel-7-hacks.sh"
+  shell: "fast-vm import_image rhel-7.4 {{ rhel_image_url_base }}/generated/6g__rhel-7.4.img.xz {{ xml_url_base }}/rhel/xml/rhel-6.3-current.xml {{ hacks_url_base }}/rhel/hacks/6g_rhel-7-hacks.sh"
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}rhel-7.4"
   tags:
@@ -77,7 +77,7 @@
     - rhel7_4
 
 - name: RHEL 7.4 UEFI
-  shell: "fast-vm import_image rhel-7.4-uefi {{ rhel_image_url_base }}/generated/6g__rhel-6.3-uefi.img.xz {{ xml_url_base }}/rhel/xml/rhel-7.0-7.4-uefi.xml {{ hacks_url_base }}/rhel/hacks/6g_rhel-7-hacks-uefi.sh"
+  shell: "fast-vm import_image rhel-7.4-uefi {{ rhel_image_url_base }}/generated/6g__rhel-6.3-uefi.img.xz {{ xml_url_base }}/rhel/xml/rhel-7.0-current-uefi.xml {{ hacks_url_base }}/rhel/hacks/6g_rhel-7-hacks-uefi.sh"
   args:
     creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}rhel-7.4-uefi"
   tags:
