--- a/tasks/fedora.yml
+++ b/tasks/fedora.yml
@@ -25,3 +25,12 @@
   tags:
     - fedora
     - fedora_28
+
+### Fedora 29
+- name: Fedora 29 BIOS
+  shell: "fast-vm import_image fedora29 {{ public_image_url_base }}/generated/6g__fedora-29.img.xz {{ xml_url_base }}/fedora/xml/fedora-29.xml {{ hacks_url_base }}/fedora/hacks/6g_fedora-29-hacks.sh"
+  args:
+    creates: "/dev/{{ ansible_local.fastvm.conf.thinpool_vg }}/{{ ansible_local.fastvm.conf.vm_prefix }}fedora29"
+  tags:
+    - fedora
+    - fedora_29
