add RHEL 8.0 Beta images with Fedora 29 appliance

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -53,3 +53,9 @@
   tags:
     - rhel
     - rhel7_all
+- name: include rhel8 images
+  include: rhel8.yml
+  when: rhel_image_url_base != ''
+  tags:
+    - rhel
+    - rhel8_all
