--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,7 +1,8 @@
 ---
 galaxy_info:
-  author: Ondrej Faměra 
+  author: Ondrej Faměra
   description: role for importing images into fast-vm
+  company: Ondrej Faměra
   license: GPLv3
   min_ansible_version: 2.0
   platforms:
